# platformer

./: CMakeLists.txt  CMakeListstmp.txt
installer/: installer.vcxproj
platformer/: platformer.vdproj
res/: sprite.xcf
res/shaders/: background.fs
src/: main.cpp
src/Controller/: Player.cpp  Player.hpp
src/EventSystem/: Event.hpp
src/Game/: GameState.cpp  GameState.hpp
src/Obstacles/: ObstaclesManager.cpp  ObstaclesManager.hpp
